--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,12 @@
-version: 0.1
+version: 0.2
 
 phases:
     build:
       commands:
-        -echo Nothing to do yet
+        - test
 artifacts:
   files:
-    -index.html
-    -favicon.ico
-    -styles/main.css
-    -images/*
+    - index.html
+    - favicon.ico
+    - styles/main.css
+    - images/*
